--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
+###> symfony/vich-uploader ###
+/public/upload
+###< symfony/vich-uploader ###
+
 ###> MacOs gitignore ###
 .DS_Store
 .AppleDouble
